LOK-1887: handle azure monitoring edge cases (#1374)
* LOK-1887: handle azure monitoring edge cases

* LOK-1887: increase test coverage

* LOK-1887: add more null checking

* LOK-1887: increase test coverage

* LOK-1887: add warning message

* LOK-1887: address PR comments